tweak the status bar right padding

--- a/gearshift/src/main/res/values/dimens.xml
+++ b/gearshift/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="torrent_list_traffic_text_size">10sp</dimen>
     <dimen name="torrent_list_status_text_size">12sp</dimen>
     <dimen name="torrent_list_error_text_size">10sp</dimen>
+
+    <!-- Landscape nexus 7 right padding seems to differ from portait one -->
+    <dimen name="status_line_padding_right">0dp</dimen>
 </resources>
