--- a/gearshift/src/main/res/drawable/filter_list_profile_item_background.xml
+++ b/gearshift/src/main/res/drawable/filter_list_profile_item_background.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_focused="true" android:state_pressed="true"
-        android:drawable="@color/color_primary_dark" />
+        android:drawable="@color/primary_dark" />
 
     <item android:state_focused="false" android:state_pressed="true"
-        android:drawable="@color/color_primary_dark" />
+        android:drawable="@color/primary_dark" />
 
     <item android:state_focused="true"
-        android:drawable="@color/color_primary_dark" />
+        android:drawable="@color/primary_dark" />
 
     <item android:state_selected="true"
          android:drawable="@drawable/filter_border_right"/>
@@ -19,6 +19,6 @@
          android:drawable="@drawable/filter_border_right"/>
   
     <item
-        android:drawable="@color/color_primary" />
+        android:drawable="@color/primary" />
 
 </selector>
