--- a/gearshift/src/main/res/values/styles.xml
+++ b/gearshift/src/main/res/values/styles.xml
@@ -5,10 +5,13 @@
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="colorControlNormal">@color/color_primary_dark</item>
+        <item name="colorControlNormal">@color/material_blue_grey_800</item>
+        <item name="colorControlHighlight">@color/control_highlight</item>
+        <item name="colorControlActivated">@color/control_activated</item>
+        <item name="colorSwitchThumbNormal">@color/white</item>
         <item name="actionBarStyle">@style/DefaultToolbar</item>
         <item name="windowActionBar">false</item>
         <item name="windowActionModeOverlay">true</item>
