--- a/gearshift/src/main/res/layout/torrent_list_twopane.xml
+++ b/gearshift/src/main/res/layout/torrent_list_twopane.xml
@@ -24,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
+        android:layout_marginRight="16dp"
         tools:layout="@android:layout/list_content" />
     
     <RelativeLayout
